--- a/index.html
+++ b/index.html
@@ -2,15 +2,38 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
+    <title>Newton Tribute Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
-    “Hello World!”
+
+    <div class="container">
+      <div id="main">
+        <header>
+            <h1 id="title" class="text-center">Newton Tribute Page</h1>
+        </header>
+        <figure id="img-div">
+          <figcaption id="img-caption" class="text-center">Isacc Newton</figcaption>
+          <img id="image" src="images/issacn.jpg" alt="Newton">
+        </figure>
+        <div id="tribute-info">
+            <p style="text-align: justify;">
+              Isaac Newton was born (according to the Julian calendar in use in England at the time) on Christmas Day, 25 December 1642 (NS 4 January 1643[a]), "an hour or two after midnight",[12] at Woolsthorpe Manor in Woolsthorpe-by-Colsterworth, a hamlet in the county of Lincolnshire. His father, also named Isaac Newton, had died three months before. Born prematurely, Newton was a small child; his mother Hannah Ayscough reportedly said that he could have fit inside a quart mug.[13] When Newton was three, his mother remarried and went to live with her new husband, the Reverend Barnabas Smith, leaving her son in the care of his maternal grandmother, Margery Ayscough (née Blythe). Newton disliked his stepfather and maintained some enmity towards his mother for marrying him, as revealed by this entry in a list of sins committed up to the age of 19: "Threatening my father and mother Smith to burn them and the house over them."[14] Newton's mother had three children (Mary, Benjamin and Hannah) from her second marriage.[15]
+            </p>
+            <p style="text-align: justify;">
+              From the age of about twelve until he was seventeen, Newton was educated at The King's School, Grantham, which taught Latin and Ancient Greek and probably imparted a significant foundation of mathematics.[16] He was removed from school and returned to Woolsthorpe-by-Colsterworth by October 1659. His mother, widowed for the second time, attempted to make him a farmer, an occupation he hated.[17] Henry Stokes, master at The King's School, persuaded his mother to send him back to school. Motivated partly by a desire for revenge against a schoolyard bully, he became the top-ranked student,[18] distinguishing himself mainly by building sundials and models of windmills.[19]
+            </p>
+        </div>
+        <div class="">
+          <a class="btn btn-outline-info" href="https://en.wikipedia.org/wiki/Isaac_Newton" id="tribute-link" target="_blank">More info</a>
+        </div>
+    </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
-
     <script  src="js/index.js"></script>
   </body>
 </html>
